--- a/Bookstore-SPA/src/app/admin/admin.component.html
+++ b/Bookstore-SPA/src/app/admin/admin.component.html
@@ -167,6 +167,28 @@
       <tab heading="Banners">
         <h3 class="mt-3">Banners</h3>
         <hr>
+        <h4>Current banners</h4>
+        <div class="row mt-3">
+          <div class="col" *ngFor="let banner of banners">
+            <img class="banner" src="{{banner.photoUrl}}" (click)="onBanner(banner.id)" alt="third slide" style="display: block; width: 100%;">
+          </div>
+        </div>
+        <div class="row mt-5" *ngIf="bannerEditing">
+          <form #editForm="ngForm" id="editForm" (ngSubmit)="editBanner()" class="form-inline">
+            <div class="container">
+              <div class="row">
+              <h5>Url</h5>
+              <input type="text" name="title" class="form-control w-100" rows="1" [(ngModel)]="banner.photoUrl">
+              <h5>Query</h5>
+              <input type="text" name="author" class="form-control w-100" rows="1" [(ngModel)]="banner.query">
+              </div> 
+            </div>
+           
+            
+            <button type="submit" class="btn btn-success mr-2 ml-2 mt-4" [disabled]="!editForm.dirty">Submit</button>
+            <button type="button" class="btn btn-primary mt-4" (click)="leaveEditBanner()">Cancel</button>
+          </form>
+        </div>
       </tab>
     </tabset>
   </div>
