--- a/Bookstore-SPA/src/app/books/book-detail/book-detail.component.html
+++ b/Bookstore-SPA/src/app/books/book-detail/book-detail.component.html
@@ -16,7 +16,7 @@
           'gold-star': book?.favourite,
           'black-star': book?.favourite
         }"
-        (click)="addToFavourite(book?.id)" id="star" style="font-size:28px;"></i></div>
+        (click)="addToFavourite()" id="star" style="font-size:28px;"></i></div>
     </div>
    
    <h5 class="mb-2">{{book?.author}} </h5>
