--- a/Bookstore-SPA/src/app/books/books.component.html
+++ b/Bookstore-SPA/src/app/books/books.component.html
@@ -84,7 +84,8 @@
                 'gold-star': book.favourite,
                 'black-star': book.favourite
               }"
-               id="star" style="font-size:28px;"></i>
+               id="star" style="font-size:28px;" 
+               (click)="addToFavourite(book)"></i>
           </div>
         </div>
         
