--- a/Bookstore-SPA/src/app/favourites/favourites.component.html
+++ b/Bookstore-SPA/src/app/favourites/favourites.component.html
@@ -1,3 +1,31 @@
-<p>
-  favourites works!
-</p>
+<div class="row mt-5 mb-5 ml-5">
+  <div class="card bg-secondary mb-3 card-hover mr-4" style="max-width: 20rem;" *ngFor="let book of books">
+    <div class="row">
+      <div class="col-10">
+        <h4 class="card-title m-3">{{book.title}} </h4>
+      </div>
+      <div class="col-2">
+        <i class="fa fa-star  mr-1 mt-2 icon"
+          [ngClass]="{
+            'gold-star': book.favourite,
+            'black-star': book.favourite
+          }"
+           id="star" style="font-size:28px;" 
+           (click)="addToFavourite(book)"></i>
+      </div>
+    </div>
+    
+    
+    <div (click)="goToDetail(book.id)">
+      
+      <h5 class="card-title mb-3 ml-3">{{book.author}}</h5>
+      <div class="card-body">
+       <img src={{book.photoUrl}} alt="C" class="image">
+        <h4 class="mt-2" *ngIf="book.onSale === false">{{book.price}} PLN</h4>
+        <h4 class="mt-2" *ngIf="book.onSale === true"><s>{{book.price | number:'1.0-2'}}</s> {{book.salePrice | number:'1.0-2'}} PLN</h4>
+        <p class="card-text mt-2">{{book.description | slice:0:100}}...</p>
+     </div>
+    </div>
+    
+  </div>
+</div>
